fix overlay z-index, add dropdownmenu

--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -112,3 +112,7 @@
 .vp-doc p {
   @apply mt-0.5 md:mt-2;
 }
+
+[data-radix-popper-content-wrapper] {
+  z-index: 1000;
+}
